--- a/gb/nf3046_3.md
+++ b/gb/nf3046_3.md
@@ -24,7 +24,15 @@
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/10/2/n11561511.md#1" target="_blank">马国民众声援三退大潮 谴责中共在港暴行</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/10/2/n11561511.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/01-20190929-Mal-TD-IMG_2141-R-150x120.jpg" align ="left"></a>在刚过的周末（9月29日）下午，马来西亚退党服务中心义工们来到了首都吉隆坡市中心，在人山人海的武吉免登区（Bukit Bintang）举行集会，和民众一起声援3亿4千2百万退出共产党、共青团和少先队的“三退”勇士们；同时抗议中共黑手暴力攻击香港法轮功学员，制造流血事件。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月02日 10:11 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/10/1/n11559592.md#1" target="_blank">中共篡政70年 凌晓辉：从反送中看到希望</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/10/1/n11559592.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/01/1201150518552519-150x120.jpg" align ="left"></a>为了“国庆70周年”，本应与国同庆的人民却被控制，除了商场不能卖菜刀外，小饭馆被强制停业，医院不准收留病人，长安街附近的居民不能用燃气，甚至，上公厕都要实名登记……有评论表示，如今的中国不是中国人民的，所以这不是国庆，而是国殇。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月01日 6:16 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/9/30/n11558127.md#1" target="_blank">中共随时戒严 泛民及民阵4人发起十一大游行</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/9/30/n11558127.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/WhatsApp_Image_2019-10-01_at_12417_AM@1200x1200-150x120.jpeg" align ="left"></a>9月30日下午，三名香港民主派前议员李卓人、何俊仁、梁国雄以及民阵副召集人陈皓桓宣布，四人将以个人身份，承接民阵原来游行路线，于10月1日下午1时由铜锣湾东角道集合，游行到中环遮打道行人专用区。他们表示，此为公民抗命举动，清楚法律后果。他们四人随时都有被捕的危机。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月01日 3:11 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/10/15/n11588801.md#1" target="_blank">每日三退声明精选（2019/10/14）</a><br></h3>本人出生并成长在中国大陆，接受的中共多年洗脑教育，因此不经意间成为愚民的一份子。多年之后，才有机会接触到了一部分尘封的历史真相，逐渐认清了中共这个反人类政党的邪恶本质，极权、谎言、暴力、血腥是它的代名词，它的存在，全面抹杀了中华民族的精英人才，荼毒了中华民族的优秀文化，是对人类文明和自由的最大威胁。马列主义肆虐中华大地，绑架了十四亿人民，幽厉兴则民好暴，我中.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月15日 10:54 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/9/15/n11522484.md#1" target="_blank">期刊：《九评特刊》165期</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/9/15/n11522484.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/A4-165-1-150x120.jpg" align ="left"></a>
+
+跨页尺寸点击下载a3-165
+
+单页尺寸点击下载a4-165
+
+       
+
+&nbsp;......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月15日 12:14 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/10/14/n11586464.md#1" target="_blank">每日三退声明精选（2019/10/13）</a><br></h3>我们很早就知道中共不是什么好东西，但是受国内的洗脑教育，一直觉得国内的乱像是受2000年封建社会历史的影响，四九年中共建政以后的历史一直都是空白，中共对这70年历史讳莫如深，只讲什么丰功伟绩，大跃进、文革、六四从来没有讲。大部分年轻人甚至不知道六四、法轮功是怎么回事。直到一个炼法轮功的朋友和我们聊天，详细介绍了中共四九年以后的历史，才知道我们生活在怎样一个世.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月14日 11:48 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/10/13/n11584815.md#1" target="_blank">每日三退声明精选（2019/10/12）</a><br></h3>现在终于看到中共可怕的地方在于，一日不除这个恶魔，全部华人都得遭殃。看看现在全世界对华人的印象和限制，很多时候都是因为中共。还有很多海外的大陆华人被中共的毒素中毒颇深，连马化腾、马云等富人的命运都不足以唤醒他们。我觉得很可怕，真的很邪恶。为了给自己一个安全的未来，本人在此在精神上和身份上退出中共党团队，脱离中共的辖制，抛弃邪恶，走向自由！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月13日 11:03 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/10/11/n11581660.md#1" target="_blank">每日三退声明精选（2019/10/10）</a><br></h3>上学时被欺骗加入少先队组织，中共说血旗是血染成的，中共的政权确实是建立在苦难的中国民众的累累白骨之上的。在这个意义上塔利班去北京只是去膜拜祖师爷去的，也许它们想从中共那里学到，如何像中共在香港一样无恶不作制造巨大恐怖效应，但又不受到惩罚。中共用一个字：邪；两个字：邪教；三个字：假、恶、斗；四个字：邪恶至极；五个字：马克思主义；九个字：邪、骗、扇、斗、抢、痞、.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月11日 10:58 AM							</td></tr>
