--- a/gb/nsc413_3.md
+++ b/gb/nsc413_3.md
@@ -1,4 +1,9 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/hxrfvz257/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxrfvz257/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11732231.md#1" target="_blank">首阶段美中贸易协议达成后 中方采购美大豆</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11732231.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/f3a3ca777f3bd568f057edd11d1b582f-150x120.jpg" align ="left"></a>美中达成首阶段贸易协议后，传出中国重新向美国采购大批大豆。英媒引述美国出口商报导，17日已向中方售出约12万吨大豆。另有中国交易商称，至少订购6艘船大豆，总数相当于40万吨。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 4:22 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11732101.md#1" target="_blank">选前22天 台湾对抗红媒渗透 空前激战</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11732101.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/ff5e11fb30c42496fc25a3236006c24f-150x120.jpg" align ="left"></a>随着台湾2020总统大选进入倒数阶段，台湾对抗中共渗透媒体、影响舆论一役，正在空前激战。美国非营利组织“保护记者委员会”12月16日发表报告提到，香港和台湾的新闻自由正遭受中共巨大压力与影响。报告指，台湾总统大选逼近，中共藉商业压力影响媒体，企图影响社会舆论。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 3:44 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11731608.md#1" target="_blank">【拍案惊奇】弹劾案来龙去脉 罢免川普很难</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11731608.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e1a21e1316d352_ttl7daySYx_bg1218-150x120.jpg" align ="left"></a>周三中午，美国众议院开始了弹劾川普的辩论，辩论预计持续6个小时，之后会对川普的两项弹劾条款投票。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 1:40 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11731433.md#1" target="_blank">中共对企业补贴五年翻倍 美中谈判增难度</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11731433.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/06/1306091240272519-150x120.jpg" align ="left"></a>中共对大陆企业的补贴从2013年至2018年间翻了一倍，而且今年还在增长，有观点认为，中共补贴会造成美中有关贸易谈判相关结构性改革陷入僵局。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 12:57 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11731729.md#1" target="_blank">两渝访民遭拦截 北京随处可见警方查身份证</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11731729.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/S__14024792-150x120.jpg" align ="left"></a>据在京访民提供消息，近日北京重要区域随处可见警察在查身份证。18日上午，重庆维权人士陈明玉和郭兴梅走在北京王府井大街上，被三名警察拦下检查身份证，后被送去王府井派出所，直到晚上8点半左右由重庆政府人员接到高家场46-3号。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 11:42 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11731529.md#1" target="_blank">脆弱美中贸易协议凸显中共内部分裂</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11731529.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/4d09fc2d8d66de2edc8e9aa7ad7cb72f-600x400-1-150x120.jpg" align ="left"></a>近期，美中双方达成了“第一阶段的贸易协议”。但中共大外宣及左派网站都在攻击或看衰这份贸易协议，凸显了中共内部分裂。外媒认为，这份协议脆弱的原因之一，是中共历来不遵守承诺。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 10:37 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11731504.md#1" target="_blank">英国敦促北京与港人对话 兑现联合声明承诺</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11731504.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1LT8PG-150x120.jpg" align ="left"></a>当地时间周四（12月19日），英国政府发表一份声明，敦促中共当局与香港抗议者展开对话，并尊重中方于35年前在《中英联合声明》中所作的承诺。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 9:42 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11731266.md#1" target="_blank">美媒：《中国日报》在美非法投放中共宣传物</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11731266.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-51951054-600x400-150x120.jpg" align ="left"></a>熟悉美国外国代理人注册申请的专家指出，中共国家媒体《中国日报》（海外版，China Daily）没有遵守联邦法律，公开其在《纽约时报》、《华盛顿邮报》等美国报纸上的宣传费。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 8:19 AM							</td></tr>
@@ -18,22 +23,15 @@
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730896.md#1" target="_blank">陆机构估经济减速 党官称人均GDP增 学者解析</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730896.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/04/1406101713442003-150x120.jpg" align ="left"></a>最近半个多月以来，中国人民大学相关机构两次发布相同的中国明年GDP增速目标数据，都低于6%，有分析指可能是提前“吹风”，另有中共官员称中国人均GDP有望赶超美国，最近有海外学者深入分析了GDP增速背后的中国经济真相。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 3:07 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11731023.md#1" target="_blank">粤村民汽油弹攻政府视频曝光 目击者描述现场</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11731023.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/IMG_9586-150x120.jpg" align ="left"></a>继11月底广东茂名化州市文楼镇上万村民抗议建火葬场之后，12月16、17日，在距离文楼镇27公里的播扬镇再次爆发抗议，警民冲突激烈，村民扔汽油弹攻政府，一位在场村民刘先生向大纪元记者描述了现场情况。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 2:52 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11731125.md#1" target="_blank">河北蠡县三任派出所所长壮年暴死</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11731125.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1410140122312483-150x120.jpg" align ="left"></a>自1999到2011年，河北省蠡县鲍墟乡有三任派出所所长，外加一个副乡长壮年暴死。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 2:50 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730763.md#1" target="_blank">【新闻看点】习访澳门 管控空前 全城半瘫痪</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730763.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1189420298-150x120.jpg" align ="left"></a>习近平访问澳门，澳门当局所采取的“安保措施”，可苦了澳门市民。轻轨停运、航道禁航、加油站不供油、提款机不许提款等等，几乎造成了澳门全城“瘫痪”。澳门人相对平静的生活，因为习的到来被完全打乱了，有网民怒斥“极度扰民”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 2:46 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730895.md#1" target="_blank">80门店全关门 大陆又一家生鲜电商停业</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730895.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/VCG111100293019-600x400-150x120.jpg" align ="left"></a>近日，上海的生鲜电商“妙生活”悄然关掉了所有门店。对此，“妙生活”的创始人表示，高额的成本让企业很难盈利。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 2:12 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730832.md#1" target="_blank">联想控股董事长柳传志卸任 “黑马”宁旻接班</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730832.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/170329073323100615-150x120.jpg" align ="left"></a>12月18日晚间，联想控股正式发布了柳传志退休的消息，被外界熟知的“联想少帅”杨元庆却无缘接班。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 1:21 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730768.md#1" target="_blank">复旦大学改章程删自由 学生集体唱校歌抗议</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730768.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/fudan-150x120.jpg" align ="left"></a>复旦大学大幅度阉割章程在社会上引发争议，也在复旦师生中引发不满可以抗议。有学生自发合唱校歌之行为，对校方拟修改大学章程的计划表示抗议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 12:43 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730369.md#1" target="_blank">累陷冤狱8年 法轮功学员王怀富遭迫害离世</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730369.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/11-11-150x120.jpg" align ="left"></a>四川绵阳市法轮功学员王怀富被中共非法关押8次，被迫害累计8年半，最后被嘉州监狱注射大量不明药物，奄奄一息回家。2019年7月16日，王怀富含冤离世，终年71岁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 11:22 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730384.md#1" target="_blank">【直播回放】台湾总统选举 首场电视政见会</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730384.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Screen-Shot-2019-12-18-at-10.30.57-pm-150x120.png" align ="left"></a>中华民国2020总统大选首场电视政见发表会今（18日）晚7时在华视登场，三组候选人包括总统蔡英文、国民党候选人韩国瑜、亲民党候选人宋楚瑜，首度同台讲述政见。新唐人电视台和大纪元将进行网络直播，请锁定新闻直播间。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 9:37 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11729384.md#1" target="_blank">【翻墙必看】茂名易地建火葬场引发流血冲突</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11729384.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/HKDJY20191218A01_v4_cut-600x400-1-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11732530.md#1" target="_blank">西安老师连打学生耳光 家长曝全班几乎都被打</a><br></h3>12月17日，陕西省西安市华清园小学六年级某班的学生家长群里传出一段老师打学生的视频。视频中，一名女老师揪着一名男生的耳朵，将他拉到门后的墙角，然后连打他多个耳光。有家长表示，除了一名学习很好的女生外，班里的学生几乎都被打过。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 5:08 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11731456.md#1" target="_blank">【唐靖远快评】中共战狼式大外宣频频触礁</a><br></h3>最近这两天，在中共大外宣领域接连发生大事件，而且当事人称得上是一个比一个大牌，一时间网络舆情汹涌，可以说赚足了公众的目光。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 2:02 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11731537.md#1" target="_blank">上海3家乐高中心关停 或面临倒闭潮</a><br></h3>外滩、瑞虹、金桥三家上海乐高活动中心“关停”的消息持续发酵。上百名购买了课程的家长呼喊维权。由于乐高集团已在10月取消中国经销商西觅亚的授权，未来可能还有150家乐高活动中心面临倒闭。
 
-1.村民疑政府易地建火葬场 茂名再爆警民冲突
-广东茂名建火葬场事件再爆发激烈冲突。上周，播扬镇民众怀疑政府故伎重施，以建净化水设施为由在当地修建火葬场，引发村民强烈抵制，并发生激烈警民冲突和流血事件。
+微信公众号“蓝魔方少儿”发文称，乐高活动中心上海外滩店、金桥店和瑞虹店16日大门紧闭，门上贴着“闭店声明”，而门市所留的联络方式也打不通，令许多家长大感错愕。
 
-2.赵薇零滤镜大特写曝光 网民直呼看傻眼
-凭在《还珠格格》中饰演“小燕子”走红的大陆女星赵薇，日前在大陆.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 9:30 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730220.md#1" target="_blank">美智库：美军应部署无人侦察机监视中共</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730220.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1000w_q95-4-150x120.jpg" align ="left"></a>美国华府智库哈德逊研究所（Hudson Institute）在一份新的报告中指出，为了监控中共军方在台湾海峡和南海的举动，美军应该部署现代化的无人侦察机，方为上策。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 6:00 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11729034.md#1" target="_blank">港TVB裁员一成 台商和董事局主席疑退出</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11729034.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/19-12-19.52-150x120.jpg" align ="left"></a>被称为香港央视的无线电视（TVB），不但将裁员一成，而且高层人事接连调整。现在又传出董事局主席陈国强和台湾富商王雪红将双双退出TVB。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 5:18 PM							</td></tr>
+澎.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 12:29 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11731789.md#1" target="_blank">每日三退声明精选（2019/12/18）</a><br></h3>共产党的两大法宝就是笔杆子和枪杆子，笔杆子是用来骗人的同时用其歪理邪说对人进行毒害洗脑。枪杆子是用来杀人和维持其邪恶统治的。现在又多了一个钱袋子用来收买和腐蚀人。这就是共产邪党的主要伎俩。其所作所为充分证明其就是一个黑帮邪教。我们声明退出这个邪党，不与邪恶为伍。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 11:35 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11731701.md#1" target="_blank">四川再发地震 今年至少14次地震</a><br></h3>继12月18日四川内江5.2发生地震后，19日凌晨，四川绵阳再发3级地震，震源深度10千米。今年四川频发地震，加上今次，发生至少14次地震，还有部分余震未算入。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 11:02 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11731657.md#1" target="_blank">清华大学90后共青团官员校内溺亡</a><br></h3>日前，90后的清华大学团委科创中心主任朱某（朱小亮）在校园内坠河身亡的消息，引发外界关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 10:42 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730296.md#1" target="_blank">瑞典环保少女晒德国坐车照 引发争议</a><br></h3>瑞典环保少女格雷塔日前搭火车回家时公布了一张她坐在火车地上的照片，结果却引发德国网民对虚伪与诚实的热烈讨论，连德国顶级政治人物都发表了意见。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 12:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/hxrfvz257/djy/blob/master/gb/nsc413_3.md#1<br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/hxrfvz257/djy/blob/master/gb/nsc413_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_3.htm">http://www.epochtimes.com/gb/nsc413_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
